--- a/rbgy/index.html
+++ b/rbgy/index.html
@@ -21,8 +21,8 @@
 </head>
 <body style="padding:0; margin: 0; background: #000;">
 <canvas id="gameCanvas" width="450" height="800"></canvas>
-<script src="frameworks/cocos2d-html5/CCBoot.js"></script>
-<script src="main.js"></script>
+
+<script src="game.min.js"></script>
 <script src="weixin/WeixinApi.js"></script>
 <script src="weixin/weixindata.js"></script>
 </body>
