--- a/wx2048/index.html
+++ b/wx2048/index.html
@@ -23,7 +23,7 @@
 <canvas id="gameCanvas" width="320" height="480"></canvas>
 
 <script src="game.min.js"></script>
-<script src="weixinapi.js"></script>
+<script src="WeixinApi.js"></script>
 <script src="weixindata.js"></script>
 </body>
 </html>
