--- a/wx2048/index.html
+++ b/wx2048/index.html
@@ -19,11 +19,9 @@
         }
     </style>
 </head>
-<body style="padding:0; margin: 0; background: #000;">
-<canvas id="gameCanvas" width="320" height="480"></canvas>
+<body style="padding:0; margin: 0; background: #fff;">
+<canvas id="gameCanvas" width="320" height="480" style="background-color: white"></canvas>
 
 <script src="game.min.js"></script>
-<script src="WeixinApi.js"></script>
-<script src="weixindata.js"></script>
 </body>
 </html>
