add wx2048 and pictoword to index.html.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
 <a href="http://kivvi.mobi/2048">2048</a>
+<a href="http://kivvi.mobi/wx2048">wx2048</a>
 <a href="http://kivvi.mobi/rbgy">RBGY</a>
 <a href="http://kivvi.mobi/yangtuo">小羊驼</a>
-<!--<a href="http://kivvi.mobi/pictoword">疯狂猜图</a>-->
+<a href="http://kivvi.mobi/pictoword">科鲁兹大赢家</a>
 </body>
 </html>
