--- a/wx2048/index.html
+++ b/wx2048/index.html
@@ -9,6 +9,7 @@
     <meta name="screen-orientation" content="portrait"/>
     <meta name="x5-fullscreen" content="true"/>
     <meta name="360-fullscreen" content="true"/>
+    <meta name="viewport" content="target-densitydpi=device-dpi"/>
     <style>
         body, canvas, div {
             -moz-user-select: none;
